--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 html, body {
     margin: 0;
     padding: 0;
-    height: 100svh;
+    height: 100vh;
     font-family: ui-sans-serif,-apple-system,system-ui,Segoe UI,Helvetica,Apple Color Emoji,Arial,sans-serif,Segoe UI Emoji,Segoe UI Symbol;
 }
 
@@ -28,7 +28,7 @@ body {
 }
 
 #content {
-    height: 100svh;
+    height: 100vh;
     width: 84ch;
     max-width: calc(100% - 1em);
     display: flex;
